2009-11-17  Johnny Ding  <jnd@chromium.org>

        Reviewed by Darin Adler.

        In all valid script tags for JavaScript, the event handler in <script...for> should not get executed.
        https://bugs.webkit.org/show_bug.cgi?id=31567

        * dom/ScriptElement.cpp:
        (WebCore::ScriptElementData::shouldExecuteAsJavaScript):

2009-11-17  Pavel Feldman  <pfeldman@chromium.org>

        Reviewed by Timothy Hatcher.

        Web Inspector: Make DRT show web inspector for tests in inspector/ folder.
        - Updated DRT to show/close inspector for all tests under /inspector
        - Introduced LayoutTestController::setTimelineProfilingEnabled and
          WebInspector::setTimelineProfilingEnabled beside setJavaScriptProfilingEnabled
        - Removed reload on each inspector test
        - Renamed fast/inspector to fast/inspector-support in order not to trigger
        inspector for those.
        - Reimplemented timeline tests in order to get rid of reload there.
        - Moved tests that don't require harness into the fast group.

        https://bugs.webkit.org/show_bug.cgi?id=31472

        * WebCore.Inspector.exp:
        * inspector/front-end/TimelinePanel.js:
        (WebInspector.TimelinePanel.prototype._formatRecord):

2009-11-17  Andrei Popescu  <andreip@google.com>

        Reviewed by Dimitri Glazkov.

        [Android] Android is missing the implementation of the GeolocationService iface.
        https://bugs.webkit.org/show_bug.cgi?id=31554

        No new tests required as this is platform specific code.

        * platform/android/GeolocationServiceAndroid.cpp: Added.
        (WebCore::GeolocationServiceAndroid::create):
        (WebCore::GeolocationServiceAndroid::GeolocationServiceAndroid):
        (WebCore::GeolocationServiceAndroid::startUpdating):
        (WebCore::GeolocationServiceAndroid::stopUpdating):
        (WebCore::GeolocationServiceAndroid::suspend):
        (WebCore::GeolocationServiceAndroid::resume):